rewrite todo api following swaggo format
